# vulnicheck

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_ZIP_SUPPORT.md  CLAUDE.md  CLAUDE_INSTALL.md  CONTEXT_PROTECTOR.md  DETAILS.md  DOCKER_HUB_SETUP.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.alpine  FILEPROVIER_INTEGRATION.md  LICENSE  Makefile  README.md  auto_install.sh  docker-compose.auth-example.yml  docker-compose.yml  install.py  pyproject.toml  pytest.ini  pytest_excludes.txt  restart-vulnicheck-ngrok.sh  run-local.sh  run_integration_tests.sh  server.json  setup.sh  test_mcp.sh  vulnicheck_proxy.py
.beads/: issues.jsonl
.github/: PULL_REQUEST_TEMPLATE.md
docs/: authentication.md  dangerous_commands_config.md  file_provider_architecture.md  mcp_client_callback_tools_specification.md  mcp_client_integration_guide.md  nodejs_analysis_architecture.md
examples/: claude_code_integration_example.py  file_provider_integration.py  mcp_client_file_provider_reference.py  test_dangerous_commands.py
scripts/: build-docker.sh
tests/: mcp_client_file_provider_reference.py  test_auth.py  test_cache.py  test_circl_client.py  test_comprehensive_security_check.py  test_context_protector.py  test_conversation_storage.py  test_cve_osv_fallback.py  test_dangerous_commands_config.py  test_docker_scanner.py  test_file_providers.py  test_ghsa_cve_mapping.py  test_github_client.py  test_github_scanner.py  test_http_transport.py  test_import_scanner.py  test_llm_integration.py  test_llm_risk_assessor.py  test_lock_files.py  test_mcp_approval_integration.py  (+18 more)
(+107 files in other folders)
